--- a/config/database.yml
+++ b/config/database.yml
@@ -83,7 +83,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
+  adapter: postgresql
   #database: test_app_production
   #username: test_app
   #password: <%= ENV["TEST_APP_DATABASE_PASSWORD"] %>
