Updated rubocop.yml to avoid files which shouldn't comply with LineLength

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,8 +3,13 @@ inherit_gem:
 
 inherit_from: .rubocop_todo.yml
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 100
+  Exclude:
+    - db/**/*
+    - config/**/*
+    - bin/**/*
+    - Gemfile
 
 Metrics/BlockLength:
   Exclude:
