--- a/.github/workflows/workflow_simple.yml
+++ b/.github/workflows/workflow_simple.yml
@@ -37,5 +37,5 @@ jobs:
       - uses: borales/actions-yarn@v3.0.0
         with:
           cmd: install
-      - name: Run tests
-        run: bundler exec rspec .
+      # - name: Run tests
+      #   run: bundler exec rspec .
